--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,128 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+@import "animate.css";
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+:root {
+  --primary: #1d1d1b;
+  --linkColor: rgb(97, 97, 97);
+  --box-shadow: 0 0 10px #52525235;
+  --animationSmooth: all 200ms ease-out;
+  --bodyColor: #f1f1f1;
+}
+:root {
+  line-height: 1.6;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+.inter {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings: "slnt" 0;
+}
+
+.small {
+  font-size: 14px;
+}
+body {
+  background-color: #f1f1f1;
+  color: #212121;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Inter", sans-serif;
+  min-height: 100svh;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  scroll-behavior: smooth;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+  line-height: 1.6;
+  font-size: clamp(16px, 1.2vw, 19px);
+}
+.back-to-top {
+  position: fixed;
+  bottom: 60px;
+  right: 45px;
+  z-index: 300;
+  
+}
+
+.back-to-top-button {
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: #fff;
+  border: 1px solid silver;
+  background-color: #434d48ec;
+  box-shadow: 0 0 10px #52525235, 0 0 10px #52525212;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: opacity 0.3s;
+}
+
+.back-to-top-button:hover {
+  opacity: 0.7;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(97, 97, 97);
+}
+
+li {
+  list-style: none;
+}
+
+.btns {
+  padding: 10px 20px;
+  margin-right: 6px;
+  background: transparent;
+  border: none;
+  border: 0.6px solid #ccc;
+  border-radius: 5px;
+  color: #323232;
+  cursor: pointer;
+}
+
+.flexSpaceBetween {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.flexCenter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.flexSpaceAround {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.flexBase {
+  display: flex;
+  align-items: baseline;
+  justify-content: last baseline;
+}
+
+.light-grey {
+  color: rgb(125, 125, 125);
 }
