--- a/src/HeadText/HeadText.css
+++ b/src/HeadText/HeadText.css
@@ -1,93 +1,82 @@
-
-
-:root{
-  --primary: #1d1d1b
+:root {
+  --primary: #3e3b34;
 }
 
-.head-text{
-    font-weight: 600;
-    font-size: 30px;
-    color: rgba(34, 34, 33, 0.884);
-    font-family: 'Cormorant Garamond', serif;     
-}
-
-
-
-.nav-icons{
-    width: 1.5rem;
-    height: 1.3rem;
-    color:var(--primary);
-}
-
-
-
-.outer-div{
-    min-height: 5.2rem;
-    position: sticky;
-    width: 100%;
-    background-color: #f5f5f2;
-    top: 0;
-    z-index: 99;
-    padding: 10px 20px;
-    border-bottom: 0.01px solid #1d1d1b33;
-   
-}
-
-.inner-div{
-    width: 100%;
-    overflow: hidden;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-content: space-between;
-    align-items: center;
-    
-}
-
-.inner-div a{
-    color: var(--primary);
-    font-weight: bold;
-}
-
-.div-one{
-    font-size: 13px;
-    width: 100%; 
-    justify-content: space-between;
-}
-
-.div-one div{
-  cursor: pointer;
-  width: 100%;
-  transition: all .4s ease;
-
-  
-  &:hover{
-    animation: pulse .4s ease;  
-    color: var(--linkColor);
-  }
-    
-}
-
-
-
-.div-two{
-    color: rgba(34, 34, 33, 0.884);
-    width: 100%;
-    flex-grow: 1;
-    
-}
-
-.div-three{
+.head-text {
+  text-transform: uppercase;
+  color: #3e3b34;
+  line-height: 1.1;
+  font-size: 27px;
+  letter-spacing: -0.045em;
+  font-weight: 600;
+  display: flex;
   align-items: center;
-  justify-content:end;
-  justify-content: right;
+}
+
+.nav-icons {
+  width: 1.5rem;
+  height: 1.3rem;
+  color: var(--primary);
+}
+
+.outer-div {
+  min-height: 5.2rem;
+  position: sticky;
+  width: 100%;
+  background-color: #f5f5f2;
+  top: 0;
+  z-index: 99;
+  padding: 10px 20px;
+  border-bottom: 0.01px solid #1d1d1b33;
+}
+
+.inner-div {
+  width: 100%;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  justify-content: center;
+  align-items: center;
+}
+
+.div-one {
+  font-size: 15px;
+  font-weight: 500;
+  display: flex;
+  width: 100%;
+  gap: 15px;
+}
+
+.div-one div {
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+
+.div-one div:hover {
+  animation: pulse 0.4s ease;
+  color: var(--linkColor);
+}
+
+.div-two {
+  width: 100%;
+  flex-grow: 1;
+  margin-left: 10px;
+}
+
+.fangs {
+  height: 25px;
+}
+
+.div-three {
+  align-items: center;
+  justify-content: end;
   width: 100%;
 }
 
-.div-three div{
+.div-three div {
   display: flex;
   align-items: center;
   justify-content: right;
-
 }
 
 .hamburger {
@@ -99,131 +88,123 @@
   background-color: transparent;
   border: 0;
   margin: 0;
-  overflow: visible; 
-  z-index: 999; 
+  overflow: visible;
+  z-index: 999;
 }
 
+.hamburger:hover {
+  opacity: 0.7;
+}
 
-  .hamburger:hover {
-    opacity: 0.7;
-   }
+.hamburger.is-active:hover {
+  opacity: 1;
+  color: #000;
+}
 
-  .hamburger.is-active:hover {
-    opacity: 1; 
-    color: #000;
-  }
-  .hamburger.is-active .hamburger-inner,
-  .hamburger.is-active .hamburger-inner::before,
-  .hamburger.is-active .hamburger-inner::after {
-    background-color: rgb(16, 16, 16); }
+.hamburger.is-active .hamburger-inner,
+.hamburger.is-active .hamburger-inner::before,
+.hamburger.is-active .hamburger-inner::after {
+  background-color: rgb(16, 16, 16);
+}
 
 .hamburger-box {
   width: 20px;
   height: 20px;
   display: inline-block;
-  position: relative; 
- 
+  position: relative;
 }
 
 .hamburger-inner {
   display: block;
   top: 50%;
-  
 }
-  .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
-    width: 20px;
-    height: 1.1px;
-    background-color: #000;
-    border-radius: 4px;
-    position: absolute;
-    transition-duration: 0.15s;
-    transition-timing-function: ease;
-    z-index: 999; 
-  }
 
-  .hamburger-inner::before, .hamburger-inner::after {
-    content: "";
-    display: block;
-  }
+.hamburger-inner,
+.hamburger-inner::before,
+.hamburger-inner::after {
+  width: 20px;
+  height: 1.1px;
+  background-color: #000;
+  border-radius: 4px;
+  position: absolute;
+  transition-duration: 0.15s;
+  transition-timing-function: ease;
+  z-index: 999;
+}
 
-  .hamburger-inner::before {
-    top: -5px; }
-  .hamburger-inner::after {
-    bottom: -5px; }
+.hamburger-inner::before,
+.hamburger-inner::after {
+  content: "";
+  display: block;
+}
 
-/*
-   * 3DX
-   */
+.hamburger-inner::before {
+  top: -5px;
+}
+
+.hamburger-inner::after {
+  bottom: -5px;
+}
+
+/* 3DX */
 .hamburger--3dx .hamburger-box {
-  perspective: 80px; }
+  perspective: 80px;
+}
 
 .hamburger--3dx .hamburger-inner {
-  transition: transform 0.15s cubic-bezier(0.645, 0.045, 0.355, 1), background-color 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1); }
-  .hamburger--3dx .hamburger-inner::before, .hamburger--3dx .hamburger-inner::after {
-    transition: transform 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1); }
+  transition: transform 0.15s cubic-bezier(0.645, 0.045, 0.355, 1),
+    background-color 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.hamburger--3dx .hamburger-inner::before,
+.hamburger--3dx .hamburger-inner::after {
+  transition: transform 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
 
 .hamburger--3dx.is-active .hamburger-inner {
   background-color: transparent !important;
-  transform: rotateY(180deg); }
-  
-  .hamburger--3dx.is-active .hamburger-inner::before {
-      background-color: black;
-    transform: translate3d(0, 5px, 0) rotate(45deg); }
-  .hamburger--3dx.is-active .hamburger-inner::after {
-      background-color: black;
-    transform: translate3d(0, -5px, 0) rotate(-45deg);
-   }
-
-.showMobile{
-display: none;
-cursor: pointer;
+  transform: rotateY(180deg);
 }
 
-.acc-icon{
+.hamburger--3dx.is-active .hamburger-inner::before {
+  background-color: black;
+  transform: translate3d(0, 5px, 0) rotate(45deg);
+}
+
+.hamburger--3dx.is-active .hamburger-inner::after {
+  background-color: black;
+  transform: translate3d(0, -5px, 0) rotate(-45deg);
+}
+
+.showMobile {
+  display: none;
+  cursor: pointer;
+}
+
+.acc-icon {
   max-width: 50px;
 }
 
-@keyframes fadeIn {
-  from{
-    animation: none;
+@media only screen and (max-width: 650px) {
+  .outer-div {
+    margin: 0;
+    padding: 10px;
+    min-height: 4rem;
+    border-bottom: 1.2px solid #1d1d1b33;
   }
-  to{
-    animation: fadeInUp;
+
+  .showMobile {
+    display: block;
+    font-size: small;
   }
-  
-}
-@keyframes fadeIn2 {
-  from{
-    transform: translateY(0px);
+
+  .div-one {
+    display: none;
   }
-  to{
-    transform: translateY(-1.5px);
+
+  .bag-mobile {
+    display: flex;
+    justify-content: right;
+    align-items: center;
   }
-  
-}
-
-
-@media only screen and (max-width:650px){
-
-    .outer-div{
-        margin: 0;
-        padding: 10px; 
-        min-height: 4rem;  
-        border-bottom: 1.2px solid #1d1d1b33;  
-    }
-
-    .showMobile{
-        display: block;
-        font-size: small;
-    }
-    
-    .div-one{
-        display: none;    
-    }
-
-    .bag-mobile{
-      display: flex;
-      justify-content: right;
-      align-items: center;
-    }
 }
