--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import "animate.css";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 :root {
-  --primary: #1d1d1b;
+  --primary: #1C1D20;
   --linkColor: rgb(97, 97, 97);
   --box-shadow: 0 0 10px #52525235;
   --animationSmooth: all 200ms ease-out;
@@ -39,7 +39,7 @@
 }
 body {
   background-color: #f1f1f1;
-  color: #212121;
+  color: #1C1D20;
   -webkit-font-smoothing: antialiased;
   font-family: "Inter", sans-serif;
   min-height: 100svh;
