--- a/src/All Category/AllCategory.css
+++ b/src/All Category/AllCategory.css
@@ -1,16 +1,46 @@
-.Ac-card {
-  cursor: pointer;
-}
-
 .category-section {
-  position: relative;
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 10px;
   padding: 10px;
   margin-top: 10px;
   padding-bottom: 40px;
+}
+
+.sponsor-wrapper {
+  margin: 1em;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.sponsor-wrapper img {
+  width: 100%;
+  height: 40px;
+  object-fit: contain;
+}
+
+.cat-item {
+  color: #3c443f;
+  text-transform: uppercase;
+  font-size: 15px;
+  font-weight: bolder;
+  display: inline-flex;
+  gap: 10px;
+}
+
+button {
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 650px) {
+  .category-section {
+    grid-template-columns: 1fr 1fr;
+    gap: 5px;
+  }
+}
+.ac-card {
+  cursor: pointer;
 }
 
 .img-absolute-div {
@@ -20,11 +50,9 @@
   box-shadow: var(--box-shadow);
   background-repeat: no-repeat;
   overflow: hidden;
-  position: relative;
   min-height: 20em;
-  z-index: -1;
   background-color: rgba(34, 33, 33, 0.195);
-  background-blend-mode: darken;
+  background-blend-mode: var(--background-blend);
   border-radius: 5px;
 }
 
@@ -34,9 +62,11 @@
   top: 3%;
   margin-left: 10px;
 }
-
-.new-div {
-  background-color: var(--secondary);
+.cat-title {
+  padding-left: 10px;
+}
+.promo-div {
+  background-color: var(--bodyColor);
   padding: 5px 11.5px;
   color: var(--primary);
   font-weight: bold;
@@ -46,7 +76,7 @@
 
 .img-promo {
   background-color: #3c443f;
-  color: var(--secondary);
+  color: var(--bodyColor);
   font-weight: 400;
 }
 
@@ -55,47 +85,21 @@
 }
 
 .shop-circle {
-  background-color: var(--secondary);
+  background-color: var(--bodyColor);
   border-radius: 50%;
-  width: 50px !important;
-  height: 50px !important;
+  width: 50px;
+  height: 50px;
   box-shadow: var(--box-shadow);
   position: absolute;
   bottom: 3.5%;
+  z-index: 10;
   left: 3.5%;
-  transition: all 0.4s ease;
-}
-.cat-item{
-    color: whitesmoke;
-    padding:  5px 10px;
-    font-family:Arial, Helvetica, sans-serif;
-    border-radius: 3px;
-    text-transform: uppercase;
-    font-size: 16px;
-    font-weight: bolder;
-    background-color: rgba(9, 23, 26, 0.938);
-}
-.color-radio {
-  min-width: 10px;
-  min-height: 10px;
-  border-radius: 50%;
-  background-color: #3c443f;
-  position: absolute;
+  transition: var(--animationSmooth);
 }
 
-.color-radio-border {
-  background-color: transparent;
-  border: 1px solid rgb(151, 151, 151);
-  min-width: 15px;
-  min-height: 15px;
-  border-radius: 50%;
-}
-
-.color-picker {
-  position: absolute;
-  bottom: 3%;
-  right: 3%;
-  gap: 10px;
+.shop-circle:hover {
+  transform: scale(1.1);
+  background-color: rgb(255, 255, 255);
 }
 
 .ac-card-details h3 {
@@ -106,84 +110,34 @@
 }
 
 .ac-card-details p {
-  padding: 5px 0;
   font-weight: bold;
 }
 
-.card-details-texts {
-  margin-top: 10px;
-}
-.ac-title {
-  font-size: 1.4em;
-  font-weight: 600;
-  margin-left: 20px;
-  margin-top: 2.5em;
-  letter-spacing: 0.3px;
-  color: var(--primary);
-}
-
-.sponsor-wrapper img {
-  width: 100%;
-  height: 40px;
-  object-fit: contain;
-  overflow: hidden;
-}
-
-.sponsor-wrapper {
-  margin-top: 3em;
-  width: 100%;
-  overflow: hidden;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-}
-button {
-  cursor: pointer;
-}
-
-.small-btn {
-  height: 2.5em;
-  padding: 0 1.5em 0.05em 1.5em;
-  font-size: small;
-  font-weight: 500;
-  border-radius: 3px;
-  border: none;
-  font-family: inherit;
-  outline: none;
-}
-
-
-.small-btn-container {
-  gap: 8px;
-}
-
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+.ad-card img {
+  display: block;
 }
 
 @media only screen and (max-width: 650px) {
-  .Ac-card {
-    padding: 10px;
+  .img-absolute-div {
+    min-height: 15em;
+    object-fit: cover;
+  }
+  .promo-div {
+    font-size: 10px;
+  }
+  .shop-circle {
+    width: 30px;
+    height: 30px;
   }
 
-  .ac-card-img {
-    display: block;
-    object-fit: cover;
-    min-height: 235px;
-    background-color: rgba(34, 33, 33, 0.329);
-    background-blend-mode: darken;
+  .nav-icons {
+    height: 17px;
   }
 
   .ac-card-details p {
     font-size: small;
     font-weight: 600;
     line-height: 1.2;
-    color: #7d8080;
     letter-spacing: 0.5px;
   }
 }
