--- a/src/BagItems/BagItems.css
+++ b/src/BagItems/BagItems.css
@@ -1,107 +1,221 @@
-
-
-.Bag-item-section{
-    min-width: 25%;
-    position: fixed;
-    min-height: 55%;
-    max-height: 80vh;
-    max-width: 25%;
-    border-right: 2px solid #e5e5e5;
-    z-index: 99;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow: hidden;
-    background-color: #f5f5f2 !important;
-    top: 13.9%;
-    right: 0;
-    gap: 3px ;
-    padding: 10px 5px;    
-}
-
-.bag-item{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 100%;
-    padding: 20px 15px;
-    font-size: 15px;
-    border-bottom: 1px dotted rgb(107, 105, 105);
-}
-
-.item-count{
-    border: 1px solid lightgray;
-    padding: 8px;
-    font-size: smaller;
-    border-radius: 5px;
-}
-
-.bag-item button{
-    padding: 2px 15px;
-    border: none;
-    background-color: black;
-    color: white;
-    height: 100%; 
-}
-
-.bag-item span{
-    padding: 3px 0;
-}
-
-.total-div{
-    width: 100%;
-    padding: 12px;
-    font-size: small;
-    position: relative;
-}
-
-.checkout-btn{
-    padding: 13px 25px;
-    border-radius: 25px;
-    background-color:var(--primary);
-    border: none;
-    color: whitesmoke;
-    font-weight: lighter;
-    letter-spacing: .5px;
-}
-
-.close{
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding-right: 10px;
-    padding-top: 10px;
-    font-size: smaller;
-}
-
-.bag-empty{
-    text-align: center;
-    font-size: small;
-    color: var(--linkColor);
-    font-weight: 400;
-    flex-direction: column;
-    height: 100%;
-    
-}
-
-.cont-shopping{
-    letter-spacing: .5px;
-    text-decoration: underline;
-    margin-top: 20px;
-    color: var(--primary);
-}
-.bag-empty img{
-    width: 100%;
-    width: 9em;
-    object-fit: contain;
-    padding: 40px 0;
-}
-
-@media only screen and (max-width:650px){
-    .Bag-item-section{
-        min-width: 65%;
-        min-height: 35%;
-        top: 7%;
-        right: 0;
+@keyframes opacity {
+    0% {
+      opacity: 0;
     }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  .animateFade {
+    animation: opacity 2.5s both;
+  }
+
+.Bag-item-section {
+  min-width: 30%;
+  max-width: 25%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  border-right: 2px solid #e5e5e5;
+  box-shadow: var(--box-shadow);
+  z-index: 600;
+  display: flex;
+  flex-direction: column;
+  padding: 12px;
+  text-align: left;
+  opacity: 0;
+  background-color: #f5f5f2 !important;
+  overflow-y: scroll;
+}
+
+.Bag-item-section h2 {
+  color: #303030;
+  margin-top: 0.3em;
+  font-weight: 600;
+  font-size: 2em;
+  text-transform: uppercase;
+}
+
+.Bag-item-section p {
+  font-weight: bolder;
+}
+.purchase-img {
+  max-height: 23.5em;
+  object-fit: cover;
+}
+.bag-img-div {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+.remove-item-div {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  top: 10px;
+  right: 10px;
+}
+.remove-item-div button {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  border: none;
+  outline: none;
+  padding: 5px 10px;
+  justify-content: space-between;
+  border-radius: 5px;
+  background-color: #0d0d0da9;
+  color: #c9c9c9;
+  box-shadow: var(--box-shadow);
+  font-weight: 500;
+  transition: all 0.4s ease;
+  text-align: center;
+  font-weight: 300;
+}
+.remove-item {
+  color: #bfbfbf;
+}
+
+.remove-item-btn {
+    padding: 0;
+    width: 20px;
+    height: 20px;
+    transition: transform 200ms ease-out, background-color 200ms ease-out;
+  }
+  
+  .remove-item-div button:hover {
+    transform: scale(1.1);
+    background-color: #0d0d0d;
+  }
+  
+
+.shoeSizes {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: small;
+}
+
+.shoeSizes li {
+  border: 1px solid rgb(48, 48, 48);
+  width: 100%;
+  text-align: center;
+  font-weight: 500;
+  cursor: pointer;
+  text-transform: uppercase;
+  padding: 5px 0;
+  background-color: rgb(237, 237, 237);
+  font-size: 10px;
+}
+
+.shoeSizes li:hover {
+  background-color: rgba(220, 226, 227, 0.846);
+}
+
+.Bag-item-section::-webkit-scrollbar {
+  display: none;
+}
+
+.bag-item {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+  padding-top: 20px;
+  font-size: 16px;
+}
+
+.item-count {
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  display: grid;
+  margin-left: 10px;
+  grid-template-columns: 2fr 2fr 2fr;
+  justify-items: center;
+  font-size: smaller;
+  font-weight: bolder;
+}
+
+.bag-empty-div {
+  width: 100%;
+}
+
+.bag-empty-cart {
+  width: 100%;
+  min-height: 150px;
+}
+
+.bag-btn {
+  background-color: rgba(33, 33, 33, 0.87);
+  width: 100%;
+  color: #f5f5f2;
+  text-align: center;
+  padding: 0 10px;
+  cursor: pointer;
+}
+
+.total-div {
+  font-size: 1em;
+  font-weight: 600;
+  display: flex;
+  margin-top: 20px;
+  gap: 1.2em;
+  text-transform: uppercase;
+  color: #303030;
+  line-height: 1.1;
+}
+
+.checkout-btn {
+  margin: 10px 0;
+  background-color: var(--primary);
+  border: none;
+  min-height: 50px;
+  font-size: 17px;
+  font-weight: bold;
+  color: var(--bodyColor);
+}
+
+.btn-link {
+  min-width: max-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.bag-empty {
+  text-align: center;
+  color: var(--linkColor);
+  display: grid;
+  height: 100%;
+  align-items: center;
+}
+
+.cont-shopping {
+  letter-spacing: 0.5px;
+  text-decoration: underline;
+  margin-top: 20px;
+  color: var(--primary);
+}
+
+@media only screen and (max-width: 650px) {
+  .Bag-item-section {
+    min-width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  .bag-item{
+    padding: 10px;
+    width: 20em;
+    box-shadow: var(--box-shadow);
+  }
+  .checkout-btn{
+    width: 100%;
+    padding: 10px 1em;
+  }
 }
