--- a/src/Hero/Hero.css
+++ b/src/Hero/Hero.css
@@ -1,80 +1,85 @@
-:root {
-    --secondary: rgba(255, 255, 255, 1);
-    --background-color: rgba(34, 33, 33, 0.277);
-    --text-color: #181818;
-    --background-blend: darken;
-    --article-font-size: 15px;
-    --hero-padding: 10px;
-    --font-weight-bold: bold;
-    --font-size-large: 3em;
-  }
-  
+
+.hero {
+  min-height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  background: url("C:/Users/KENNY/Ecommerceproject/ecommerceproject/src/assets/nike.svg")
+      center/contain repeat,
+    var(--background-color) !important;
+  background-blend-mode: var(--background-blend);
+}
+
+.hero-inner-section {
+  background-color: #f5f5f2;
+  color: var(--text-color);
+  height: 60%;
+  max-width: 80%;
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 2px;
+}
+
+.yzy {
+  width: 100%;
+}
+
+.hero-sales-text {
+  padding: 2.5em;
+  display: grid;
+  gap: 4px;
+}
+
+.article {
+  padding: 18px;
+  font-size: 15px;
+  color: var(--text-color);
+  font-weight: 500;
+  cursor: pointer;
+  line-height: 2px;
+  text-decoration: underline;
+  text-transform: uppercase;
+}
+
+.relative-img {
+  position: relative;
+}
+.reminder-container p {
+  position: absolute;
+  bottom: 3.5%;
+  left: 8.5%;
+  transition: all 0.4s ease;
+  padding: 2px 13px;
+  padding-left: 40px;
+  border-radius: 5px;
+  background-color: #0d0d0da9;
+  color: #f5f5f2;
+  z-index: 2;
+  font-weight: 500;
+}
+
+@media only screen and (max-width: 650px) {
   .hero {
-    min-height: 70vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: var(--hero-padding);
-    background: url("C:/Users/KENNY/Ecommerceproject/ecommerceproject/src/assets/nike.svg") center/contain repeat,
-      var(--background-color);
-    background-blend-mode: var(--background-blend);
+    background-color: rgba(34, 33, 33, 0.329);
   }
-  
-  .hero-text {
-    background-color: #f5f5f2;
+
+  .hero-sales-text p {
+    text-align: left;
+  }
+  .hero-inner-section {
+    display: block;
+  }
+  .article{
+    line-height: normal;
+    padding: 0;
+    border-bottom: black;
+    text-decoration: none;
+  }
+  .hero-inner-section {
     color: var(--text-color);
-    height: 60%;
-    max-width: 80%;
-    position: relative;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 2px;
+    height: auto;
+    display: block;
   }
-  
-  .yzy {
-    width: 100%;
-  }
-  
-  .hero-sales-text {
-    padding: 2.5em;
-    display: grid;
-    gap: 4px;
-  }
-  
-  .hero-headtext {
-    font-weight: var(--font-weight-bold);
-    color: var(--text-color);
-    font-size: var(--font-size-large);
-    line-height: 1.095;
-    margin-bottom: 10px;
-  }
-  
-  .article {
-    padding: 18px;
-    font-size: var(--article-font-size);
-    color: var(--text-color);
-    font-weight: 500;
-    cursor: pointer;
-    line-height: 2px;
-    text-decoration: underline;
-    text-transform: uppercase;
-  }
-  
-  @media only screen and (max-width: 650px) {
-    .hero {
-      background-color: rgba(34, 33, 33, 0.329);
-    }
-  
-    .hero-sales-text {
-      text-align: center;
-      padding: 20px;
-    }
-    .hero-text{
-        display: block;
-    }
-    .hero-headtext {
-      font-size: 2.2rem;
-      padding-bottom: 30px;
-    }
-  }
-  
+}
